Fixed photo alignment, fonts

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Oswald', sans-serif;
 }
 
 .title-inner {
@@ -18,12 +19,12 @@
     color: #000;
     text-shadow: 1px 1px 2px #fff;
 }
-h3, li {
-    font-family: 'Oswald', sans-serif;
-}
 main {
     background-color: #A1C7DA;
 }
-/* .col {
-    border: solid red 1px;
-} */
+.col {
+    /* border: solid red 1px; */
+}
+.img-col {
+    text-align: center;
+}
